fix: added wrap on small screen

--- a/src/main/resources/css/views/_index.scss
+++ b/src/main/resources/css/views/_index.scss
@@ -26,8 +26,8 @@
     .hero-buttons {
       display: flex;
       flex-direction: row;
+      flex-wrap: wrap;
       gap: 0.5em;
-
     }
   }
 
